[package]
name = "yahoo-dl"
version = "0.1.0"
authors = ["Juan C. Yamacho H. <jcyamacho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["gzip", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.5"